test/integration/examples-bad/ode/stanc.expected
  $ ../../../../../install/default/bin/stanc bad_bdf_control_function_return.stan

Semantic error in file bad_bdf_control_function_return.stan, lines 13-15, columns 6-35:
   -------------------------------------------------
    11:  model {
    12:    real x[2, 2]
    13:      = integrate_ode_bdf(twoCptModelODE,
               ^
    14:                          {1, 1.3}, 1.0, { 2.2, 3 }, { 1.0 }, { 1.0 }, { 2 },
    15:                          10, 10, 10);
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real, real[], real, real[], real[], real[], int[], int, int, int.

  $ ../../../../../install/default/bin/stanc bad_fun_type.stan

Semantic error in file bad_fun_type.stan, lines 27-33, columns 10-27:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real[], real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_fun_type_bdf.stan

Semantic error in file bad_fun_type_bdf.stan, lines 27-33, columns 10-27:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real[], real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_fun_type_bdf_control.stan

Semantic error in file bad_fun_type_bdf_control.stan, lines 27-33, columns 10-43:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real[], real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_fun_type_rk45.stan

Semantic error in file bad_fun_type_rk45.stan, lines 27-33, columns 10-27:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real[], real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_fun_type_rk45_control.stan

Semantic error in file bad_fun_type_rk45_control.stan, lines 27-33, columns 10-43:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real[], real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_t0_var_type.stan

Semantic error in file bad_t0_var_type.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_t0_var_type_bdf.stan

Semantic error in file bad_t0_var_type_bdf.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_t0_var_type_bdf_control.stan

Semantic error in file bad_t0_var_type_bdf_control.stan, lines 26-32, columns 10-43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_t0_var_type_rk45.stan

Semantic error in file bad_t0_var_type_rk45.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_t0_var_type_rk45_control.stan

Semantic error in file bad_t0_var_type_rk45_control.stan, lines 26-32, columns 10-43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_t_type.stan

Semantic error in file bad_t_type.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], matrix, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_t_type_bdf.stan

Semantic error in file bad_t_type_bdf.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], matrix, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_t_type_bdf_control.stan

Semantic error in file bad_t_type_bdf_control.stan, lines 26-32, columns 10-43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], matrix, real[], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_t_type_rk45.stan

Semantic error in file bad_t_type_rk45.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], matrix, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_t_type_rk45_control.stan

Semantic error in file bad_t_type_rk45_control.stan, lines 26-32, columns 10-43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], matrix, real[], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_theta_type.stan

Semantic error in file bad_theta_type.stan, lines 27-33, columns 10-27:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[,], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_theta_type_bdf.stan

Semantic error in file bad_theta_type_bdf.stan, lines 27-33, columns 10-27:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[,], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_theta_type_bdf_control.stan

Semantic error in file bad_theta_type_bdf_control.stan, lines 27-33, columns 10-43:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[,], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_theta_type_rk45.stan

Semantic error in file bad_theta_type_rk45.stan, lines 27-33, columns 10-27:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[,], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_theta_type_rk45_control.stan

Semantic error in file bad_theta_type_rk45_control.stan, lines 27-33, columns 10-43:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[,], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_ts_type.stan

Semantic error in file bad_ts_type.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[,], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_ts_type_bdf.stan

Semantic error in file bad_ts_type_bdf.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[,], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_ts_type_bdf_control.stan

Semantic error in file bad_ts_type_bdf_control.stan, lines 26-32, columns 10-43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[,], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_ts_type_rk45.stan

Semantic error in file bad_ts_type_rk45.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[,], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_ts_type_rk45_control.stan

Semantic error in file bad_ts_type_rk45_control.stan, lines 26-32, columns 10-43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[,], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_ts_var_type.stan

Semantic error in file bad_ts_var_type.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_ts_var_type_bdf.stan

Semantic error in file bad_ts_var_type_bdf.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_ts_var_type_bdf_control.stan

Semantic error in file bad_ts_var_type_bdf_control.stan, lines 26-32, columns 10-43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_ts_var_type_rk45.stan

Semantic error in file bad_ts_var_type_rk45.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_ts_var_type_rk45_control.stan

Semantic error in file bad_ts_var_type_rk45_control.stan, lines 26-32, columns 10-43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_x_int_type.stan

Semantic error in file bad_x_int_type.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[,].

  $ ../../../../../install/default/bin/stanc bad_x_int_type_bdf.stan

Semantic error in file bad_x_int_type_bdf.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[,].

  $ ../../../../../install/default/bin/stanc bad_x_int_type_bdf_control.stan

Semantic error in file bad_x_int_type_bdf_control.stan, lines 26-32, columns 10-43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[,], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_x_int_type_rk45.stan

Semantic error in file bad_x_int_type_rk45.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[,].

  $ ../../../../../install/default/bin/stanc bad_x_int_type_rk45_control.stan

Semantic error in file bad_x_int_type_rk45_control.stan, lines 26-32, columns 10-43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[,], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_x_type.stan

Semantic error in file bad_x_type.stan, lines 27-33, columns 10-27:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], vector[], int[].

  $ ../../../../../install/default/bin/stanc bad_x_type_bdf.stan

Semantic error in file bad_x_type_bdf.stan, lines 27-33, columns 10-27:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], vector[], int[].

  $ ../../../../../install/default/bin/stanc bad_x_type_bdf_control.stan

Semantic error in file bad_x_type_bdf_control.stan, lines 27-33, columns 10-43:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], vector[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_x_type_rk45.stan

Semantic error in file bad_x_type_rk45.stan, lines 27-33, columns 10-27:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], vector[], int[].

  $ ../../../../../install/default/bin/stanc bad_x_type_rk45_control.stan

Semantic error in file bad_x_type_rk45_control.stan, lines 27-33, columns 10-43:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], vector[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_x_var_type.stan

Semantic error in file bad_x_var_type.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_x_var_type_bdf.stan

Semantic error in file bad_x_var_type_bdf.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_x_var_type_bdf_control.stan

Semantic error in file bad_x_var_type_bdf_control.stan, lines 26-32, columns 10-43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_x_var_type_rk45.stan

Semantic error in file bad_x_var_type_rk45.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_x_var_type_rk45_control.stan

Semantic error in file bad_x_var_type_rk45_control.stan, lines 26-32, columns 10-43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_y_type.stan

Semantic error in file bad_y_type.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[,], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_y_type_bdf.stan

Semantic error in file bad_y_type_bdf.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[,], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_y_type_bdf_control.stan

Semantic error in file bad_y_type_bdf_control.stan, lines 26-32, columns 10-43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[,], real, real[], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_y_type_rk45.stan

Semantic error in file bad_y_type_rk45.stan, lines 26-32, columns 10-27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[,], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_y_type_rk45_control.stan

Semantic error in file bad_y_type_rk45_control.stan, lines 26-32, columns 10-43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[], data real, data real, data real) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], data real, data real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[,], real, real[], real[], real[], int[], real, real, int.

